--- a/package.json
+++ b/package.json
@@ -39,13 +39,14 @@
     "@angular-eslint/eslint-plugin-template": "^17.0.0",
     "@angular-eslint/schematics": "^17.0.0",
     "@angular-eslint/template-parser": "^17.0.0",
-    "@angular/cli": "^17.0.0",
+    "@angular/cli": "17.2.3",
     "@angular/compiler-cli": "^17.0.2",
     "@angular/language-service": "^17.0.2",
     "@capacitor/cli": "5.7.1",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^20.11.26",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "dotenv": "^16.4.5",
